--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@
 }
 
 * {
-    /* margin: 0px;
-    padding: 0px; */
     font-family: 'Montserrat', sans-serif;
 }
 html {
@@ -64,6 +62,7 @@ h1 {
 }
 
 .form-control {
+    color: var(--light) !important;
     padding: 1.1rem;
 }
 
